# aiops-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: graph.py  tools.py
alembic/: env.py
alembic/versions/: a800a36f109a_add_trace_column_to_incidents.py  d86eebbd4b59_create_incidents_table.py
api/: main.py
app/: config.py
app/agent/: graph.py  guardrails.py
app/api/: main.py
app/domain/: enums.py  exceptions.py  models.py
app/infrastructure/: database.py  models.py
app/ingestion/: consumer.py
app/knowledge/runbooks/: deploy-failure.md  latency-spike.md
app/repositories/: incident_repository.py
dashboard/: index.html
docs/: architecture-evolution.md  architecture.md  roadmap.md  technical-decisions.md  validation-guide.md
evals/: report.py  runner.py
evals/cases/: cases.json
knowledge/: __init__.py  indexer.py
knowledge/runbooks/: db-overload.md  high-error-rate.md  oom-killed.md
scripts/: simulate.py
simulator/: ecommerce_app.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_detector.py  test_domain.py  test_guardrails.py  test_trace.py
